Refactor Conectar wallet

--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -1,10 +1,10 @@
-$base-color: beige;
+$base-color: floralwhite;
 
 .base {
   background-color: $base-color;
   color: steelblue;
 
   &:hover {
-    background-color: darken($color: $base-color, $amount: 20%);
+    background-color: darken($color: $base-color, $amount: 5%);
   }
 }
