--- a/packages/nextjs/src/styles/globals.css
+++ b/packages/nextjs/src/styles/globals.css
@@ -24,3 +24,15 @@ a {
     background: lightgray;
   }
 }
+
+/* Works for Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Works for Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
+}
